--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "commonjs",
         "outDir": "./dist/",
         "rootDir": "./src/",
-        "declaration": false,
+        "declaration": true,
 
         "esModuleInterop": true,
 
